[gd_scene load_steps=16 format=3 uid="uid://ha7tjw0fr65q"]

[ext_resource type="Script" path="res://Controller.gd" id="1_e310t"]
[ext_resource type="Texture2D" uid="uid://dxj4x0fgrxp45" path="res://planes/planeBlue1.png" id="1_pjg8n"]
[ext_resource type="Script" path="res://plane.gd" id="1_pkj7m"]
[ext_resource type="PackedScene" uid="uid://djnq6s3ntc0cd" path="res://Rock.tscn" id="2_6kiko"]
[ext_resource type="Texture2D" uid="uid://bjqs0ex51t0d6" path="res://planes/planeBlue2.png" id="2_84hxi"]
[ext_resource type="PackedScene" uid="uid://dtbmin6hpvw5q" path="res://Rock2.tscn" id="3_1rqn5"]
[ext_resource type="Texture2D" uid="uid://ykfmkxg230dk" path="res://planes/planeBlue3.png" id="3_mprst"]
[ext_resource type="AudioStream" uid="uid://yg0onfjtfxwv" path="res://Three Red Hearts - Box Jump.ogg" id="7_4ppuo"]
[ext_resource type="AudioStream" uid="uid://dy3r457vkvd8q" path="res://impactPunch_medium_001.ogg" id="8_7yndx"]
[ext_resource type="Texture2D" uid="uid://dj7chcglu7ihq" path="res://background.png" id="10_h4jpy"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5llck"]
radius = 46.0977

[sub_resource type="SpriteFrames" id="SpriteFrames_770kn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_pjg8n")
}, {
"duration": 1.0,
"texture": ExtResource("2_84hxi")
}, {
"duration": 1.0,
"texture": ExtResource("3_mprst")
}],
"loop": true,
"name": &"Flap",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_84hxi")
}],
"loop": true,
"name": &"Glide",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_vsexu"]
resource_name = "Slide_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.966667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(22, -122), Vector2(22, 122)]
}

[sub_resource type="Animation" id="Animation_llltq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(22, -122)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v68fe"]
_data = {
"RESET": SubResource("Animation_llltq"),
"Slide_in": SubResource("Animation_vsexu")
}

[node name="spinnyplane" type="Node2D"]
script = ExtResource("1_e310t")
rock_resource = ExtResource("2_6kiko")
rock_resource2 = ExtResource("3_1rqn5")

[node name="Background" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(4742, 498.5)
scale = Vector2(11.845, 1.62708)
texture = ExtResource("10_h4jpy")

[node name="plane" type="RigidBody2D" parent="."]
script = ExtResource("1_pkj7m")

[node name="CollisionShape2D" type="CollisionShape2D" parent="plane"]
position = Vector2(249, 543)
shape = SubResource("CircleShape2D_5llck")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="plane"]
position = Vector2(244, 547)
scale = Vector2(1, 1.22603)
sprite_frames = SubResource("SpriteFrames_770kn")
animation = &"Glide"

[node name="RockTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="Sound" type="Node2D" parent="." groups=["Background"]]
position = Vector2(-284, 132)

[node name="bgm" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource("7_4ppuo")
autoplay = true

[node name="thud" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource("8_7yndx")

[node name="GameOver" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 22.0
offset_top = -122.0
offset_right = 536.0
offset_bottom = 100.0

[node name="Label" type="Label" parent="GameOver"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 3.833
offset_left = 198.0
offset_top = 16.0
offset_right = -77.0
offset_bottom = -638.926
text = "Game Over"

[node name="PlayAgain" type="Button" parent="GameOver"]
layout_mode = 1
anchors_preset = -1
offset_left = 200.0
offset_top = 100.0
offset_right = 295.0
offset_bottom = 193.0
text = "Play Again?"

[node name="AnimationPlayer" type="AnimationPlayer" parent="GameOver"]
libraries = {
"": SubResource("AnimationLibrary_v68fe")
}

[connection signal="animation_finished" from="plane/AnimatedSprite2D" to="plane" method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="RockTimer" to="." method="_on_rock_timer_timeout"]
[connection signal="pressed" from="GameOver/PlayAgain" to="." method="_on_play_again_pressed"]
